--- a/assets/scripts/templates/hero-list.handlebars
+++ b/assets/scripts/templates/hero-list.handlebars
@@ -1,35 +1,24 @@
 {{#each heros as |hero|}}
-  {{log hero}}
+  {{log hero.id}}
   <section data-id="{{hero.id}}">
     <h6>Hero:</h6>
-    <h3>
+    <form contenteditable="true">
       {{limit hero.name 15}}
-    </h2>
-    <h6>Name:</h6>
+    </form>
     <p>
-      <section>
-      {{#if hero.name}}
-        {{hero.name}}
-      {{else}}
-        No name provided.
-      {{/if}}
-    </section>
-    <section>
+      <h6> ID:{{hero.id}}</h6>
       <h6>Location:</h6>
       {{#if hero.location}}
-        {{hero.location}}
+        <form>{{limit hero.location 15}}</form>
       {{else}}
         No location provided.
       {{/if}}
-    </section>
-    <section>
       <h6>Universe:</h6>
       {{#if hero.universe}}
-        {{hero.universe}}
+        <form>{{limit hero.universe 15}}</form>
       {{else}}
         No universe provided.
       {{/if}}
-    </section>
     </p>
     <button type="submit" class="btn btn-danger delete-hero">Remove</button>
     <!-- {{> partial}} -->
