--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,7 +10,7 @@ $purple: #6a24c7;
 }
 
 body {
-  background: url("../public/images/background.jpg");
+  background: url("../public/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: $purple;
