Add css to forms and text
^

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -21,6 +21,10 @@ body {
 h2 {
   font-family: 'Bangers', cursive;
 }
+#villains,
+h2 {
+  font-family: 'Bangers', cursive;
+}
 
 header {
   font-size: 55px;
