--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -45,8 +45,13 @@ table {
 
 td,
 th {
+  font-size: 20px;
   background-color: black;
   font-family: 'Bangers', cursive;
+}
+
+td {
+  font-size: 20px;
 }
 
 #login,
